argocd/applications/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami

spec:
  type: ExternalName
  externalName: whoami.whoami.svc.cluster.local
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: whoami
